# TD4

./: CMakeLists.txt
include/: Bougie.h  Couleur.h  CoursOHLC.h  Devise.h  DeviseManager.h  EvolutionCours.h  EvolutionCoursI.h  EvolutionCoursII.h  EvolutionCoursIII.h  EvolutionViewer.h  PaireDevises.h  QBougie.h  TradingException.h
src/: Bougie.cpp  CoursOHLC.cpp  Devise.cpp  DeviseManager.cpp  EvolutionCours.cpp  EvolutionCoursI.cpp  EvolutionCoursII.cpp  EvolutionCoursIII.cpp  EvolutionViewer.cpp  PaireDevises.cpp  TradingException.cpp  main.cpp
uml/: diagram_class.puml  diagram_entity.puml  td_4.puml
